DevOps/Bernstein/B-DOP-500-RUN-5-1-bernstein-jean-michel.grondin/poll.deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: poll-deployment
  namespace: default
  labels:
    app: poll-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: poll-deployment
  template:
    metadata:
      labels:
        app: poll-deployment
    spec:
      affinity:
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            - labelSelector:
                matchExpressions:
                - key: app
                  operator: In
                  values:
                  - poll-deployment
              topologyKey: "kubernetes.io/hostname"
      restartPolicy: Always
      containers:
        - name: poll-deployment
          image: epitechcontent/t-dop-600-poll:k8s
          ports:
          - containerPort: 80
          resources:
            limits:
              memory: "128M"
