DevOps/Bernstein/B-DOP-500-RUN-5-1-bernstein-jean-michel.grondin/postgres.deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres-deployment
  namespace: default
  labels:
    app: postgres-deployment
spec:
  selector:
    matchLabels:
      app: postgres-deployment
  replicas: 1
  template:
    metadata:
      labels:
        app: postgres-deployment
    spec:
      restartPolicy: Always
      containers:
      - name: postgres-deployment
        image: postgres:12
        volumeMounts:
          - mountPath: "/var/lib/postgresql/data"
            name: my-volume
        ports:
          - containerPort: 5432
      volumes:
        - name: my-volume
          persistentVolumeClaim:
              claimName: pvc-postgre
