DevOps/Bernstein/B-DOP-500-RUN-5-1-bernstein-jean-michel.grondin/result.deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: result-deployment
  namespace: default
  labels:
    app: result-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: result-deployment
  template:
    metadata:
      labels:
        app: result-deployment
    spec:
      affinity:
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
          - labelSelector:
              matchExpressions:
              - key: app
                operator: In
                values:
                - result-deployment
            topologyKey: "kubernetes.io/hostname"
      restartPolicy: Always
      containers:
      - name: result-deployment
        image: epitechcontent/t-dop-600-result:k8s
        ports:
        - containerPort: 80
        resources:
          limits:
            memory: "128M"
