DevOps/Bernstein/B-DOP-500-RUN-5-1-bernstein-jean-michel.grondin/poll.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: poll-service
spec:
  selector:
    app: poll-deployment
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
