DevOps/Bernstein/B-DOP-500-RUN-5-1-bernstein-jean-michel.grondin/redis.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: redis-service
spec:
  selector:
    app: redis-deployment
  ports:
    - protocol: TCP
      port: 6379
      targetPort: 6379
