DevOps/Bernstein/B-DOP-500-RUN-5-1-bernstein-jean-michel.grondin/traefik.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: traefik-service
  namespace: kube-public
spec:
  type: NodePort
  selector:
    app: traefik-deployment
  ports:
    - protocol: TCP
      name: web
      nodePort: 30021
      port: 80
      targetPort: 80
    - protocol: TCP
      nodePort: 30042
      name: web2
      port: 8080
      targetPort: 8080
