DevOps/Bernstein/B-DOP-500-RUN-5-1-bernstein-jean-michel.grondin/poll.ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: poll-ingress
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
    - host: poll.dop.io
      http:
        paths:
          - path: "/"
            pathType: Prefix
            backend:
              service:
                name: poll-service
                port:
                  number: 80
